# BSI-SCC0540-projeto

./: .gitattributes  .gitignore  Cargo.toml  DDL.sql  DML.sql  ER.drawio  README.md  Relacional.uml  Rocket.toml  ]  default.nix  eleitos.sql  flake.nix  relacional.uml  sqls.yml
.builds/: aarch64.yml  x86-64.yml
assets/: style.css  style.scss
scripts/: bump.sh  empacotar.sh  gerar_apoio.sh  gerar_apoios.sh  gerar_candidaturas.sh  gerar_doacoes.sh  gerar_julgamentos.sh  gerar_pleitos.sh  gerar_processos.sh
src/: assets.rs  database.rs  error.rs  lib.rs  main.rs  pagination.rs  routes.rs
src/common/: assets.rs  database.rs  error.rs  mod.rs  pagination.rs  post_as_delete.rs  template_or_json.rs  tera.rs
src/routes/: apoios.rs  assets.rs  candidaturas.rs  cargos.rs  doacoes.rs  errors.rs  home.rs  individuos.rs  julgamentos.rs  mod.rs  partidos.rs  pleitos.rs  processos.rs
src/schema/: apoio.rs  candidatura.rs  cargo.rs  doacao.rs  individuo.rs  julgamento.rs  mod.rs  partido.rs  pleito.rs  processo.rs
templates/: base.html.tera  candidatura.html.tera  candidaturas.html.tera  cargo.html.tera  cargos.html.tera  diagram.svg.tera  doacao.html.tera  error.html.tera  flash.html.tera  individuo.html.tera  individuos.html.tera  julgamento.html.tera  paginas.html.tera  partido.html.tera  pleito.html.tera  processo.html.tera
templates/rotas/: cargo.html.tera  cargos.html.tera  individuo.html.tera
templates/routes/: apoio.html.tera  apoios.html.tera  candidatura.html.tera  candidaturas.html.tera  cargo.html.tera  cargos.html.tera  doacao.html.tera  doacoes.html.tera  individuo.html.tera  individuos.html.tera  julgamento.html.tera  julgamentos.html.tera  partido.html.tera  partidos.html.tera  pleito.html.tera  pleitos.html.tera  processo.html.tera  processos.html.tera
