[package]
name = "projeto-bd"
description = "Projeto da disciplina de Banco de Dados"
version = "1.3.4"
authors = [ "Gabriel Fontes <g.fontes@usp.br>" ]
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["tls", "json"]
[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
[dependencies.rocket_db_pools]
version = "0.1.0-rc"
features = ["deadpool_postgres"]

[dependencies.time]
version = "0.3"
features = ["serde-human-readable"]

[dependencies.rust_decimal]
version = "1.17"
features = ["db-tokio-postgres", "rocket-traits"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.postgres-types]
version = "0.2"
features = ["derive", "with-time-0_3"]

[dependencies.strum]
version = "0.22"
features = ["derive"]

[dependencies.normpath]
version = "0.3"

[dependencies.qstring]
version = "0.7"

[patch.crates-io]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_dyn_templates = { git = "https://github.com/SergioBenitez/Rocket" }
rust_decimal = { git = "https://github.com/paupino/rust-decimal" }
